modern german done

--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1412,7 +1412,7 @@ In sum, just like Modern German, Polish headless relatives do not seem to be der
 
 \section{Comparing Polish constituents}\label{sec:comparing-polish}
 
-In this section, I compare the constituents of extra light heads to those of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparison for Polish specifically, and that I motivated the content of the constituents that are being compared.
+In this section, I compare the constituents of extra light heads to those of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparison for Polish specifically, and that the content of the constituents that are being compared are motivated earlier in this chapter.
 
 I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
@@ -1783,7 +1783,7 @@ Therefore, the extra light head cannot be deleted, and the relative pronoun cann
 
 Polish is an example of a matching type of language. This means that headless relatives are grammatical in the language only when the internal and external case match.
 
-I derive this from the morphology of light heads and relative pronouns in Polish. The light head corresponds to two lexical entries, which respectively spells out phi and case features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Polish light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-pol-sum}.
+I derive this from the internal syntax of light heads and relative pronouns in Polish. The features of the light head are spelled out by two lexical entries, which respectively spells out phi and case features. The features of the relative pronoun are spelled out by the same lexical entries plus one that amongst other spells out a relative feature. The internal syntax of the Polish light head and relative pronoun are shown in Figure \ref{fig:rel-lh-pol-sum}.
 
 \begin{figure}[htbp]
   \center
@@ -1855,6 +1855,6 @@ I derive this from the morphology of light heads and relative pronouns in Polish
   \label{fig:rel-lh-pol-sum}
 \end{figure}
 
-A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is contained as a constituent within the relative pronoun when the internal and the external case match. As the light head can be recovered from within the relative pronoun, it can be deleted. There is a grammatical headless relative that surfaces with the relative pronoun which bears the internal case.
+A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. TTherefore, the light head is a constituent that is structurally contained within the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal and external case differ, neither the light head nor the relative pronoun is contained as a constituent within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the internal and external case differ, neither the light head nor the relative pronoun is a constituent that is structurally or formally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
