--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -832,3 +832,44 @@
   year={2004},
   publisher={JSTOR}
 }
+
+@article{picallo2008,
+  title={Gender and number in Romance},
+  author={Picallo, M Carme},
+  journal={Lingue e linguaggio},
+  volume={7},
+  number={1},
+  pages={47--66},
+  year={2008},
+  publisher={Societ{\`a} editrice il Mulino}
+}
+
+@article{kramer2016,
+  title={The location of gender features in the syntax},
+  author={Kramer, Ruth},
+  journal={Language and linguistics Compass},
+  volume={10},
+  number={11},
+  pages={661--677},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+@article{bittner1996,
+  title={The structural determination of case and agreement},
+  author={Bittner, Maria and Hale, Ken},
+  journal={Linguistic inquiry},
+  pages={1--68},
+  year={1996},
+  publisher={JSTOR}
+}
+
+@article{baunaz2018,
+  title={Deconstructing categories syncretic with the nominal complementizer},
+  author={Baunaz, Lena and Lander, Eric},
+  journal={Glossa: a journal of general linguistics},
+  volume={3},
+  number={1},
+  pages={1--27},
+  year={2018},
+  publisher={Glossator}
+}
