--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
-\documentclass[hidelinks,a4paper,twoside]{memoir}
+\documentclass[hidelinks,a4paper]{memoir}
 
-\includeonly{the-basic-idea}
+\includeonly{deriving-matching}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -52,9 +52,6 @@ Boarnsterhim, Niederlande\\
 
 \clearpage
 
-\phantom{x}
-
-\clearpage
 \chapter*[Acknowledgements]{Acknowledgements}
 
 thanks
